# Prepare-Kurs

./: README.md
Array/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  Test  a.out  main.cpp  out.txt
ex1/: CMakeLists.txt  a.out  ex1  main.cpp  text.txt
ex3/: CMakeLists.txt  a.out  ex3  main.cpp  text.txt
ex4/: CMakeLists.txt  Worker.cpp  Worker.h  array.cpp  array.h  ex5  main.cpp
ex5/: CMakeLists.txt  a.out  array.cpp  array.h  ex5  main.cpp  set.cpp  set.h  text.txt
ex6/: Ball.cpp  Ball.h  CMakeLists.txt  Cylinder.cpp  Cylinder.h  Shape.cpp  Shape.h  a.out  ball.cpp  ball.h  ex6  main.cpp  shape.cpp  shape.h
ex7/: ArrLine.cpp  ArrLine.h  Array.cpp  Array.h  Array_line  CMakeLists.txt  a.out  main.cpp  text.txt
